fixing text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,6 @@ h1 {
 .element {
   display: flex;
   flex-direction: row;
-  padding: 4rem;
-  padding-left: 0px;
   box-shadow: 0px 1px 10px;
   background-color: white;
   border-radius: 20px;
@@ -93,15 +91,23 @@ hr {
       flex-direction: column;
       height: 70vh;
       width: 80vw;
+      padding: auto;
     }
     .picture{
         width: 50vw;
+    }
+    .faq{
+        text-align: center;
     }
   }
   
   @media screen and (min-width: 800px) {
   .picture,.desktop-picture{
     margin-left: 0px;
+  }
+  .element{
+    padding: 4rem;
+    padding-left: 0px;
   }
     }
 
